--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
 <body>
     <section class="chat__section">
         <div class="brand">
-            <img height="40" src="/wassup.png" alt="">
-            <h1>Wassup</h1>
+            <div class="left">
+                <img height="40" src="/wassup.png" alt="">
+                <h1>Wassup</h1>
+            </div>
+            <div class="connections">
+
+            </div>
         </div>
-        <div class="message__area"></div>
-        <div>
-            <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
+        <div class="message__area">
+
+        </div>
+        <div class="msg-field">
+            <input id="textarea" placeholder="Write a message..." />
         </div>
     </section>
     <script src="/socket.io/socket.io.js"></script>
